--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
 }
 
 .tt {
-  background-image: url(slide-1.jpg);
+  background-image: url(/assets/images/slide-1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
